Fix horizontal scroll in style.css
* Removed default <body> margin.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -12,10 +12,13 @@ body {
     /* font properties */
     font-family: var(--monospace-font);
     color: var(--text-color);
+    margin: 8px 0 8px 0;
 }
 
 header {
     margin-bottom: 48px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 .header__center-emoji {
@@ -44,6 +47,8 @@ h1 {
 main {
     margin-top: 32px;
     margin-bottom: 96px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 h2 {
